--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -26,8 +26,10 @@ services:
     environment:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=polardb_catalog
- 
+      #- POSTGRES_DB=polardb_catalog
+    volumes:
+      - ./postgresql/init.sql:/docker-entrypoint-initdb.d/init.sql
+
   config-service:
     image: "ghcr.io/ivypas/config-service:latest"
     container_name: "config-service"
